<resources>
    <string name="app_name">Split The Ride</string>
    <string name="search_hint">Username</string>

    <!-- Strings related to login -->
    <string name="prompt_username">Username</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="insert_username">Insert an username</string>
    <string name="insert_password">Insert a password</string>
    <string name="insert_email">Insert an email.</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email completions."</string>
    <string name="please_wait">Please wait</string>
    <string name="performing_login">Performing login</string>
    <string name="performing_registration">Performing registration</string>
    <string name="welcome">Welcome back </string>
    <string name="new_user">New user: </string>
    <string name="signed_up"> signed up</string>
    <string name="fb_user_cancel">The user cancelled the Facebook login</string>
    <string name="twitter_login_fail">Twitter login failed: </string>

    <string name="title_activity_main">MainActivity</string>
    <string name="title_activity_navigation">NavigationActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <string name="title_activity_accounts">Accounts</string>
    <string name="title_activity_transactions">Transactions</string>
    <string name="title_activity_settings">Settings</string>
    <string name="title_activity_calendar">Calendar</string>
    <string name="title_activity_persons">Persons</string>
    <string name="title_activity_vehicles">Vehicles</string>
    <string name="title_activity_movements">Movements</string>
    <string name="title_activity_segments">Segments</string>
    <string name="title_activity_trips">Trips</string>
    <string name="title_activity_add_transaction">Add payment</string>
    <string name="title_activity_add_new_passenger">Add New Passenger</string>
    <string name="user">User</string>
    <string name="value_to_receive">Value to receive</string>
    <string name="date">Date</string>
    <string name="value">Value</string>
    <string name="from">From</string>
    <string name="to">To</string>
    <string name="payer">Payer</string>
    <string name="receiver">Receiver</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="name">Name</string>
    <string name="initials">Initials</string>
    <string name="segment_name_example">Ex. London-Mitcham</string>
    <string name="distance">Distance</string>
    <string name="distance_example" translatable="false">Ex. 10 km</string>
    <string name="cost">Cost</string>
    <string name="cost_example" translatable="false">Ex. 2.5 €</string>
    <string name="vehicle_name" translatable="false">Ex. Corolla</string>
    <string name="consumption">Consumption</string>
    <string name="consumption_example" translatable="false">Ex. 2.0</string>
    <string name="owner">Owner</string>
    <string name="edit_button_description">Edit this info</string>
    <string name="delete_button_description">Remove this entity</string>
    <string name="edit_person">Edit Person</string>
    <string name="add_person">Add Person</string>
    <string name="add">Add</string>
    <string name="edit">Edit</string>
    <string name="error">Error</string>
    <string name="initials_in_use">These initials are already in use. Choose other initials.</string>
    <string name="name_in_use">This name is already in use. Choose another name.</string>
    <string name="all_fields_mandatory">All fields are mandatory.</string>
    <string name="person">Person</string>
    <string name="person_added">Person added.</string>
    <string name="edit_success">Edited successfully</string>
    <string name="edit_error">It was not possible to edit </string>
    <string name="select_segments">Select the desired segments</string>
    <string name="edit_segment">Edit Segment</string>
    <string name="add_segment">Add Segment</string>
    <string name="segment">Segment</string>
    <string name="segment_added">Segment added.</string>
    <string name="segment_edited">Segment edited successfully.</string>
    <string name="segment_error">It was not possible to edit this segment.</string>
    <string name="title_activity_passengers_by_trips">Passengers</string>

    <!-- CALENDARS -->
    <string name="default_calendar">Default calendar</string>

    <!-- TRIPS -->
    <string name="save">Save</string>
    <string name="list_of_passengers">List of Passengers</string>
    <string name="date_format">DD/MM/YYYY</string>
    <string name="calendar_day">Calendar day</string>
    <string name="driver">Driver</string>
    <string name="vehicle">Vehicle</string>
    <string name="round_trip">Round trip</string>
    <string name="passenger">Passenger</string>

    <!-- BALANCE -->
    <string name="balance">Balance</string>

    <!-- MAIN VIEW -->
    <string name="calculate_month">Calculate month</string>

    <string name="title_activity_trips_in_date">Trips at this date</string>
    <string name="title_activity_search_users">SearchUsers</string>

    <string name="facebook_app_id">329652360740718</string>

    <string name="twitter_consumer_key">Z8zLtnkrGSN2QXebVYLi2ngQ7</string>
    <string name="twitter_consumer_secret">VpZ3S0ceuMH8VJXQfep8KHrstBOXZPbh5LDha5mV55agHoaHLA</string>
</resources>
