<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:id="@+id/parentLayout"
    tools:context="com.splitTheRide.settings.RoutesFragment"
    android:weightSum="1">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/AppTheme.PopupOverlay" />

    </android.support.design.widget.AppBarLayout>


    <RelativeLayout android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:paddingRight="15dp"
                    android:paddingLeft="15dp"
                    android:layout_marginTop="10dp">

        <TextView android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/name"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:gravity="center_vertical"
            android:foregroundGravity="center_vertical"
            android:layout_gravity="center" />

        <EditText android:id="@+id/route_name"
            android:layout_alignParentRight="true"
            android:layout_width="264dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/route_name_example" />

    </RelativeLayout>

    <RelativeLayout android:layout_height="wrap_content"
                    android:layout_width="match_parent"
                    android:orientation="horizontal"
                    android:paddingRight="15dp"
                    android:paddingLeft="15dp"
                    android:layout_marginTop="10dp">

        <TextView android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:text="@string/segment"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <ImageButton
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:src="@drawable/ic_plus"
            android:onClick="addSegmentsHandler"
            android:foregroundGravity="center_vertical"
            android:layout_alignParentRight="true"
            android:id="@+id/add_segments"
            android:layout_column="2" />
    </RelativeLayout>

    <ListView
        android:id="@+id/segments_list"
        android:layout_width="match_parent"
        android:paddingLeft="15dp"
        android:paddingRight="15dp"
        android:layout_height="146dp"
        android:layout_alignParentTop="true"
        android:scrollbarAlwaysDrawVerticalTrack="true"
        android:layout_weight="0.60">
    </ListView>


    <Button android:id="@+id/ok"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_gravity="center_horizontal"
        android:text="@string/ok" />

    <Button android:id="@+id/cancel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_gravity="center_horizontal"
        android:text="@string/cancel" />

</LinearLayout>
